# bronchovascular-bundle-modelling

./: README.md  initial_setup.sh  pyproject.toml
src/: gmm.py  lungs.py
