[tool.poetry]
name = "bronchovascular-bundle-modelling"
version = "0.1.0"
description = ""
authors = ["WojPrauch <wojciechprazuch3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydicom = "^2.3.0"
pynrrd = "^0.4.3"
jupyter = "^1.0.0"
SimpleITK = "^2.1.1"
scikit-learn = "^1.1.1"
scikit-image = "^0.19.3"
opencv-python = "^4.6.0"
sknw = "^0.14"
plotly = "^5.9.0"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
ffmpeg = "^1.4"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
